project(aupe)
add_executable(1.4 1.4.cpp)
add_executable(1.5 1.5.cpp)
add_executable(1.6 1.6.cpp)
add_executable(1.7 1.7.cpp)
add_executable(1.8.1 1.8.1.cpp)
add_executable(1.9 1.9.cpp)
add_executable(3.4 3.4creat.cpp)
add_executable(3.6 3.6.cpp)
add_executable(4.8 4.8.cpp)
add_executable(4.9 4.9.cpp)